--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "bootstrap": "^5.3.2",
-    "bootstrap": "^5.3.2",
+    "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
