--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "bootstrap": "^5.3.2",
-    "firebase": "^10.8.0",
+    "firebase": "^10.6.0",
     "lucide-react": "^0.331.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "swiper": "^11.0.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -36,6 +36,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "rules": {
+    "react/react-in-jsx-scope": "off"
   },
   "browserslist": {
     "production": [
