--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@types/node": "^16.18.79",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
     "bootstrap": "^5.3.2",
+    "eslint": "^8.57.0",
     "firebase": "^10.6.0",
     "lucide-react": "^0.331.0",
     "react": "^18.2.0",
@@ -21,7 +24,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "swiper": "^11.0.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
