--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^20.0.0",
+    "@types/prettier": "^2.7.3",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
